Fix: 스크롤 중복 오류 현상 관련하여 코드 재수정 - 브라우저 크기를 약 570px 이하 정도로 줄였을 때 다시 스크롤이 중복되어 나타나는 현상 해결 - overflow-x는 원래 .ant-layout과 .ant-layout-has-sider>.ant-layout에 있던 속성임 (style.css 파일이 덮어씌워지면서 overflow-x 속성이 제 기능을 하지못하게 되어 다시 추가함)

--- a/front/public/css/style.css
+++ b/front/public/css/style.css
@@ -29,6 +29,10 @@
 
 .ant-layout {
     background: white;
+}
+
+.ant-layout.ant-layout-has-sider>.ant-layout {
+    overflow-x: hidden;
     overflow: inherit;
 }
 
